fix(home): fix issue with the link styling when viewed on mobile

--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -10,11 +10,3 @@
   justify-content: space-between;
   min-height: 100vh;
 }
-
-header,
-footer {
-  display: grid;
-  place-items: center;
-  padding: var(--size-2);
-  font-size: var(--font-size-2);
-}
