--- a/client/src/components/MenuBar/menubar.module.css
+++ b/client/src/components/MenuBar/menubar.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   gap: var(--size-6);
   font-size: var(--font-size-3);
+  padding: 0;
 }
 
 .menuBar li {
@@ -20,4 +21,17 @@
 .menuBar a:hover {
   cursor: pointer;
   filter: brightness(85%);
+}
+
+@media (width <= 640px) {
+  .menuBar ul {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: var(--size-10);
+  }
+
+  .menuBar a {
+    padding: var(--size-4);
+  }
 }
