--- a/client/src/pages/Home/home.module.css
+++ b/client/src/pages/Home/home.module.css
@@ -1,3 +1,13 @@
-#root {
-  display: flex;
+header,
+footer {
+  display: grid;
+  place-items: center;
+  padding: var(--size-2);
+  font-size: var(--font-size-2);
+}
+
+@media (width <= 640px) {
+  header {
+    font-size: var(--font-size-0);
+  }
 }
